# zk-neural-rust-core

./: .gitattributes  .gitignore  Cargo.toml  README  cbindgen.toml  test.c  zk_neural_rust_core.h
assets/: arcface.tflite
build_helpers/ios-arm64-simulator/TensorFlowLiteC.framework/Headers/: TensorFlowLiteC.h
build_helpers/ios-arm64-simulator/TensorFlowLiteC.framework/Modules/: module.modulemap
headers/: zk_neural_rust_core.h
scripts/: build_ios.sh  create_tflitec_xcframework.sh  create_xcframework.sh  run_test.sh  update_header.sh
src/: ffi.rs  lib.rs
src/core/: callbacks.rs  constants.rs  errors.rs  face_anchors.rs  face_detection.rs  math.rs  mod.rs  tensor.rs  zk_proof.rs
