[package]
name = "zk-neural-rust-core"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["staticlib"]

[dependencies]
image = "0.25.6"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tflitec = { git = "https://github.com/rarimo/tflitec-rs.git", tag = "v0.6.1"}
thiserror = "2.0.12"
